# ai_platform_codebase

./: .env.example  .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/api/v1/: api.py  dependencies.py
app/api/v1/endpoints/: auth.py  minio.py  notifications.py  sources.py  teams.py  users.py
app/api/v1/schemas/: source.py  team.py  user.py
app/casbin/: enforcer.py  policies.py  rbac_models.conf
app/core/: config.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 023cf9db1030_hashed_otp_field_added.py  5a7a9eae1154_created_at_added_to_team_table.py  675cf52101a1_notifications_table_added.py  70f29b61cccd_typo_fixed.py  777da306fc2f_invitations_table_added.py  8745871a4752_initial_migration.py  88cc4cb519ce_reset_and_forget_password_added.py  9f5bbe068824_table_modified.py  b4324a30b0cd_forgien_key_error_fixed.py  c4e1a19c7cfc_otp_rate_limiting_added.py  d36cd0a85c71_mappign_fixed.py  e5a5abf0357c_user_verification_flow_added.py  f52217ff71bf_deleting_fixed.py
app/services/: auth_service.py  minio_service.py  notification_service.py  role_service.py  team_service.py  user_service.py  vault_service.py
app/services/mail/: mail_service.py
app/services/mail/templates/: forget_password_mail.html  invitation_mail.html  verification_mail.html  welcome_mail.html
app/workers/temporal/: client.py  run_worker.py  worker_manager.py
app/workers/temporal/activities/: app_notifications_activity.py  create_bucket_activity.py  invitation_mail_activity.py  user_email_activity.py
(+4 files in other folders)
